--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=
 DATABASE_URL="mysql://db:db@127.0.0.1:49163/db?serverVersion=mariadb-10.3.35"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=null
