--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -2,6 +2,10 @@ controllers:
     resource: ../../src/Controller/
     type: annotation
 
+    prefix:
+        en: ''
+        lt: '/lt'
+
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
